    QAccessibleInterface::doAction
- QAccessibleEvent also loses the child parameter.
    QAccessibleEvent(Type type, int child) -> QAccessibleEvent(Type type)
    QAccessibleEvent::child() removed.
- QAccessibleActionInterface:
  * Refactored to be based on action names. All functions have been changed from using
    int parameters to strings.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h


QtWidgets
---------
* QWidget::setInputContext() is removed. Input contexts are now platform
  specific.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is
  one of the IP loopback addresses.

* QSslCertificate::serialNumber() now always returns the serial number in
  hexadecimal format.


QtOpenGL
--------

QtScript
--------


QTestLib
--------
* [QTBUG-20615] Autotests can now log test output to multiple destinations