@@ -1,28 +1,0 @@
-DECL|class|QSoundPrivate
-DECL|function|QAuServer
-DECL|function|QSound
-DECL|function|QSoundPrivate
-DECL|function|bucket
-DECL|function|decLoop
-DECL|function|fileName
-DECL|function|init
-DECL|function|isAvailable
-DECL|function|isFinished
-DECL|function|loops
-DECL|function|loopsRemaining
-DECL|function|play
-DECL|function|play
-DECL|function|play
-DECL|function|server
-DECL|function|setBucket
-DECL|function|setLoops
-DECL|function|stop
-DECL|function|~QAuBucket
-DECL|function|~QAuServer
-DECL|function|~QSound
-DECL|function|~QSoundPrivate
-DECL|member|bucket
-DECL|member|filename
-DECL|member|looprem
-DECL|member|looptotal
-DECL|variable|servers
