@@ -1,1 +1,0 @@
-DECL|macro|QSOUND_H
