@@ -1,2 +1,0 @@
-DECL|macro|QSOUND_P_H
-DECL|variable|QSound
