@@ -1,5 +1,0 @@
-DECL|class|tst_QSound
-DECL|function|checkFinished
-DECL|function|staticPlay
-DECL|function|tst_QSound
-DECL|variable|tst_QSound
